# pfs

./: README.md  install.sh
.github/workflows/: daily-build.yml
agfs-mcp/: README.md  pyproject.toml
agfs-mcp/demos/: hackernews_research.py
agfs-mcp/src/agfs_mcp/: server.py
agfs-sdk/python/: pyproject.toml
agfs-sdk/python/pyagfs/: client.py
agfs-server/: .gitignore  Dockerfile  README.md  config.example.yaml  go.mod  go.sum
agfs-server/cmd/server/: main.go
agfs-server/examples/: README.md
agfs-server/examples/hellofs-c/: hellofs.c
agfs-server/examples/hellofs-rust/: Cargo.toml
agfs-server/examples/hellofs-rust/agfs-ffi/: Cargo.toml
agfs-server/examples/hellofs-rust/src/: lib.rs
agfs-server/examples/hellofs-wasm/: Cargo.toml  Makefile
agfs-server/examples/hellofs-wasm-cpp/: .gitignore  Makefile  README.md  test-config.yaml
agfs-server/examples/hellofs-wasm-cpp/agfs-cpp-sdk/: agfs.h  agfs_export.h  agfs_ffi.h  agfs_filesystem.h  agfs_hostfs.h  agfs_types.h
agfs-server/examples/hellofs-wasm-cpp/src/: main.cpp
agfs-server/examples/hellofs-wasm/.cargo/: config.toml
agfs-server/examples/hellofs-wasm/agfs-wasm-ffi/: Cargo.toml
agfs-server/examples/hellofs-wasm/src/: lib.rs
agfs-server/examples/random_string_fs/: Cargo.toml  README.md
agfs-server/examples/random_string_fs/src/: lib.rs
agfs-server/pkg/client/: README.md  client.go  client_test.go
agfs-server/pkg/config/: config.go
agfs-server/pkg/filesystem/: errors.go  filesystem.go  writer.go
agfs-server/pkg/handlers/: handlers.go  plugin_handlers.go
agfs-server/pkg/mountablefs/: mountablefs.go
agfs-server/pkg/plugin/: plugin.go
agfs-server/pkg/plugin/api/: bridge.go  host_fs.go  wasm_plugin.go
agfs-server/pkg/plugin/config/: validation.go
agfs-server/pkg/plugin/loader/: loader.go  wasm_loader.go
agfs-server/pkg/plugins/heartbeatfs/: heartbeatfs.go
agfs-server/pkg/plugins/hellofs/: hellofs.go
agfs-server/pkg/plugins/httpfs/: httpfs.go
agfs-server/pkg/plugins/kvfs/: kvfs.go
agfs-server/pkg/plugins/localfs/: localfs.go
agfs-shell/: Makefile  README.md  build.py  install.sh  pyproject.toml
agfs-shell/agfs_shell/: __init__.py  builtins.py  filesystem.py  pipeline.py  shell.py
agfs-shell/agfs_shell2/: __init__.py  builtins.py  cli.py  command_decorators.py  completer.py  config.py  streams.py
agfs-shell/agfscli/: __init__.py  cli.py  cli_commands.py  commands.py  decorators.py  version.py
agfs-shell/tests/: test_builtins.py  test_parser.py  test_pipeline.py
agfs-shell2/: Makefile  README.md  build.py  examples.sh  pyproject.toml  test_redirections.sh
agfs-shell2/agfs_shell2/: builtins.py  cli.py  completer.py  config.py  filesystem.py  parser.py  process.py  shell.py  streams.py
agfs-shell2/tests/: test_builtins.py  test_parser.py
pfs-mcp/: .mcp.json  README.md  pyproject.toml
pfs-mcp/demos/: hackernews_research.py  parallel_research.py  start_agents.sh  stop_agents.sh  task_loop.py
pfs-mcp/src/pfs_mcp/: __init__.py  server.py
pfs-sdk/python/pypfs/: __init__.py
pfs-server/: Makefile  README.md  config.example.yaml  go.mod  go.sum
pfs-server/cmd/server/: main.go
pfs-server/examples/: README.md
pfs-server/examples/hellofs-c/: Makefile  hellofs.c
pfs-server/examples/hellofs-rust/: Cargo.toml  Makefile
pfs-server/examples/hellofs-rust/pfs-ffi/: Cargo.toml
pfs-server/examples/hellofs-rust/pfs-ffi/src/: filesystem.rs  lib.rs  types.rs
pfs-server/examples/hellofs-wasm/: Cargo.toml  Makefile
pfs-server/examples/hellofs-wasm-cpp/: Makefile  README.md
pfs-server/examples/random_string_fs/: Cargo.toml  Makefile
pfs-server/pkg/client/: README.md  client.go
pfs-server/pkg/config/: config.go
pfs-server/pkg/filesystem/: filesystem.go  pathutil.go
pfs-server/pkg/handlers/: handlers.go  plugin_handlers.go
pfs-server/pkg/mountablefs/: mountablefs.go
pfs-server/pkg/plugin/: plugin.go
pfs-shell/: Makefile  README.md  build.py  install.sh  pyproject.toml
pfs-shell/pfscli/: __init__.py  cli.py  cli_commands.py  client.py  commands.py  decorators.py  version.py
(+78 files in other folders)
