[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agfs-cli"
version = "1.0.0"
description = "Interactive client for agfs server"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "agfs authors" }
]
dependencies = [
    "pyagfs",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[tool.uv.sources]
pyagfs = { path = "../agfs-sdk/python", editable = true }

[project.scripts]
agfs = "agfscli.cli:main"
agfs-cli = "agfscli.cli:main"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["agfscli"]
