[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfs-mcp"
version = "1.0.0"
description = "Model Context Protocol (MCP) server for PFS (Plugin-based File System)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "pfs authors" }
]
dependencies = [
    "pypfs",
    "mcp>=0.9.0",
]

[tool.uv.sources]
pypfs = { path = "../pfs-sdk/python", editable = true }

[project.scripts]
pfs-mcp = "pfs_mcp.server:cli"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/pfs_mcp"]
