[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfs-cli"
version = "1.0.0"
description = "Interactive client for pfs server"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "pfs authors" }
]
dependencies = [
    "pypfs",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[tool.uv.sources]
pypfs = { path = "../pfs-sdk/python", editable = true }

[project.scripts]
pfs = "pfscli.cli:main"
pfs-cli = "pfscli.cli:main"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["pfscli"]
