[package]
name = "pfs-ffi"
version = "0.1.0"
edition = "2021"
authors = ["PFS Contributors"]
description = "FFI bindings for building PFS filesystem plugins in Rust"
license = "Apache-2.0"
keywords = ["filesystem", "plugin", "ffi"]
categories = ["api-bindings", "filesystem"]

[dependencies]
libc = "0.2"

[lib]
name = "pfs_ffi"
path = "src/lib.rs"
